# automation_test4

./: .env.docker  .env.example  .gitignore  DockerFile  Dockerfile  Makefile  README.md  RTM.md  compose.yml  conftest.py  pyproject.toml  requirements.txt  run_tests.py
config/: settings.py
page_objects/: HomePage.py  IFramePage.py  home_page.py  i_frame_page.py
pages/: home_page.py
resources/: test1.feature
scripts/: ChromeDriver.py  chrome_driver.py  firefox_driver.py  run_tests.py
steps/: listof_test.py  manager.py  test_list.py  tests.py
tests/api/: test_api.py
tests/ui/: conftest.py
tests/ui/pages/: base_page.py  cart_page.py  home_page.py  login_page.py  results_page.py  store_page.py
tests/ui/steps/: test_ui.py
tests/ui/utils/: locators.py  screenshots.py
tests/ui/utils/conditions/: visibility.py
