[project]
name = "automation_test4"
description = "An implementation of a pytest ui/api test automation framework"
readme = "README.md"
authors = [
    { name = "Mauro Garcia Coto" },
]
requires-python = "3.12"


[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
addopts = [
    "--self-contained-html"
]
